[gd_scene load_steps=4 format=3 uid="uid://cjom7dn226102"]

[ext_resource type="Script" uid="uid://p651bwpeevmk" path="res://MainMenu.gd" id="1_06t4h"]
[ext_resource type="PackedScene" uid="uid://day2xcnccv5hs" path="res://Main.tscn" id="2_7vrkn"]

[sub_resource type="FontVariation" id="FontVariation_7vrkn"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_06t4h")
game_scene = ExtResource("2_7vrkn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.276226, 0.000669547, 0.43711, 1)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_7vrkn")
theme_override_font_sizes/font_size = 100
text = "Through The Ruin



"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -24.0
offset_right = 150.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Play"

[node name="ControlsButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Controls"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Quit"
